// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountDropdown activator should render an icon on mobile 1`] = `
<UnstyledLink
  className="Email"
  onClick={[Function]}
>
  <Person
    size={24}
  />
</UnstyledLink>
`;

exports[`AccountDropdown activator should render email address on desktop 1`] = `
<UnstyledLink
  className="Email"
  onClick={[Function]}
>
  <React.Fragment>
    test@testing.com
     
    <ArrowDropDown />
  </React.Fragment>
</UnstyledLink>
`;

exports[`AccountDropdown should hide docs and logout actions for heroku users 1`] = `
Array [
  Array [
    Object {
      "component": [Function],
      "content": "Profile",
      "to": "/account/profile",
    },
    Object {
      "component": [Function],
      "content": "Billing",
      "to": "/account/billing",
    },
    Object {
      "component": [Function],
      "content": "Manage Users",
      "to": "/account/users",
    },
  ],
]
`;

exports[`AccountDropdown should render correctly 1`] = `
<Popover
  bottom={true}
  left={true}
  onClose={[Function]}
  open={false}
  right={true}
  trigger={
    <UNDEFINED>
      [Function]
    </UNDEFINED>
  }
>
  <ActionList
    className="AccountList"
    onClick={[Function]}
    sections={
      Array [
        Array [
          Object {
            "component": [Function],
            "content": "Profile",
            "to": "/account/profile",
          },
          Object {
            "component": [Function],
            "content": "Billing",
            "to": "/account/billing",
          },
          Object {
            "component": [Function],
            "content": "Manage Users",
            "to": "/account/users",
          },
        ],
        Array [
          Object {
            "content": <UNDEFINED>
              API Documentation 
              <div
                className="FloatIcon"
              >
                <OpenInNew
                  size={15}
                />
              </div>
            </UNDEFINED>,
            "external": true,
            "to": "https://www.sparkpost.com/docs",
          },
        ],
        Array [
          Object {
            "content": "Log Out",
            "onClick": undefined,
          },
        ],
      ]
    }
  />
</Popover>
`;
